--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "crypto-js": "^4.1.1",
     "file-loader": "^6.2.0",
     "html-loader": "^4.2.0",
+    "javascript-obfuscator": "^4.0.2",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
     "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
+    "webpack-obfuscator": "^3.5.1",
     "yarn": "^1.22.19"
   }
 }
